# playground

./: .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  maven_install.json  rules_jvm_external~5.3~maven~maven_install.json
.github/workflows/: bazel.yml
AOC2023/01/: TASK.md
AOC2023/01-python/task-1/: main.py
AOC2023/01-python/task-2/: main.py
AOC2023/01/python/: main.py
AOC2023/02/: TASK.md
AOC2023/02/java/: Day2.java  Main.java
AOC2023/03/: TASK.md
AOC2023/03/java/: Day3.java
AOC2023/04/: TASK.md
AOC2023/04/java/: Day4.java
AOC2023/05/: TASK.md
AOC2023/05/java/: Day5.java
AOC2023/06/: TASK.md
AOC2023/06/java/: Day6.java
AOC2023/07/: TASK.md
AOC2023/07/java/: Day7.java
AOC2023/08/: TASK.md  TEST.txt
AOC2023/08/java/: Day8.java
AOC2023/09/: TASK.md
AOC2023/09/java/: Day9.java
AOC2023/10/: TASK.md
AOC2023/10/java/: Day10.java
AOC2023/11/: TASK.md
AOC2023/11/java/: Day11.java
AOC2023/12/: THEORY.md
AOC2023/12/java/: Day12.java
AOC2023/13/java/: Day13.java
AOC2023/14/java/: Day14.java
AOC2023/15/java/: Day15.java
AOC2023/16/java/: Day16.java
bazel/: .gitignore  BUILD.bazel  MODULE.bazel  README.md
bazel/projects/android/src/main/: BUILD.bazel
bazel/projects/android/src/main/java/com/example/bazel/: BUILD.bazel  Greeter2.java
bazel/projects/calculator/: BUILD.bazel  calculator.py
bazel/projects/java_greeter/src/main/java/com/example/javagreeter/greeter/: BUILD.bazel  Greeter.java
bazel/projects/java_greeter/src/main/java/com/example/javagreeter/main/: Main.java
bazel/projects/osgi_bundle/src/main/java/com/example/bundle/: SimpleActivator.java
bazel/projects/osgi_container/src/main/java/com/example/felix/: App.java  BUILD.bazel
bazel/projects/projectA/: BUILD.bazel
bazel/projects/projectB/: BUILD.bazel
osgi/simple_bundle/: pom.xml
osgi/simple_bundle/src/main/java/com/example/osgi_bundle_test/: SimpleActivator.java
osgi/simple_felix_container/: .gitignore  settings.gradle
osgi/simple_felix_container/app/: build.gradle
osgi/simple_felix_container/app/src/main/java/felix_test/: App.java
projects/android/src/main/java/com/example/bazel/: BUILD.bazel  MainActivity.java
projects/calculator/: calculator_test.py
projects/java_greeter/src/main/java/com/example/javagreeter/greeter/: BUILD.bazel  Greeter.java
projects/java_greeter/src/main/java/com/example/javagreeter/main/: BUILD.bazel  Main.java
projects/my-python-app/: BUILD.bazel  main.py
projects/projectA/: BUILD.bazel
rust/: .gitignore
rust/arduino-blink/: Cargo.toml
rust/arduino-blink/src/: main.rs
rust/avr-blink/: Cargo.toml  README.md  avr-atmega328p.json
rust/avr-blink/src/: main.rs
