"DocString"

module(
    name = "my_pos_system",
    version = "1.0",
    compatibility_level = 1,
)

### PYTHON ###
bazel_dep(name = "rules_python", version = "0.27.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    # Only set when you have mulitple toolchain versions.
    is_default = True,
    python_version = "3.11",
)

use_repo(python, "python_3_11", "python_versions")

# Make pip accessible to all rules under the name "my_deps".
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "python_deps",
    python_version = "3.11",
    requirements_lock = "//third_party/python:requirements_lock.txt",
)
use_repo(pip, "python_deps")
