package(
    default_visibility = ["//projects/android:__subpackages__"],
)

android_library(
    name = "greeterActivity",
    srcs = [
        "Greeter2.java",
        "MainActivity.java",
    ],
    manifest = "AndroidManifest.xml",
    resource_files = glob(["res/**"]),
    deps = [
        "//projects/java_greeter/src/main/java/com/example/javagreeter/greeter",
    ],
)
